package app.entities;

public class Wood {
}
